# fastapi-lambda-template

./: .gitignore  CLAUDE.md  README.md  index.html  main.py  pyproject.toml
.claude/skills/fastapi-lambda/: SKILL.md
learnings/lambda_cloudfront/: 01-aws-infrastructure.md  02-aws-infrastructure.md  02-gotchas.md  03-security.md  04-gotchas.md  04-updating-lambda.md  05-https-tls-handshake.md  05-security.md  06-updating-lambda.md  07-https-tls-handshake.md  README.md
terraform/: apigateway.tf  cloudfront.tf  dynamodb.tf  iam.tf  lambda.tf  main.tf  outputs.tf  ssm.tf  terraform.tfvars.example  variables.tf
