[project]
name = "fastapi-lambda-template"
version = "0.1.0"
description = "FastAPI on AWS Lambda with DynamoDB, JWT auth, and CloudFront frontend"
readme = "README.md"
requires-python = ">=3.10.9"
dependencies = [
    "boto3>=1.43.29",
    "fastapi>=0.136.3",
    "mangum>=0.21.0",
    "pyjwt>=2.8.0",
    "slowapi>=0.1.9",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "moto[dynamodb,ssm]>=5.2.2",
    "pytest>=9.0.3",
]
